@@ -41,7 +41,8 @@ h1,h2,h3,h4,h5,h6 {
 	color:#111;
 	font-weight:bold;
 	font-family:Arial,sans-serif;
-	line-height:2em;
+	line-height:1.2em;
+	margin-bottom:.5em;
 }
 h1 { font-size:2em; }
 h2 { font-size:1.8em; }
@@ -157,7 +158,7 @@ img, p img {
 
 /****************************************************************************************************************
 
-1. Layout 
+1. Layout
 
 ****************************************************************************************************************/
 
@@ -228,7 +229,7 @@ img, p img {
 
 /****************************************************************************************************************
 
-2. Navigation 
+2. Navigation
 
 ****************************************************************************************************************/
 
